tests/transpiler/x/cobol/let_and_print.error
compile: exit status 1
/workspace/mochi/tests/transpiler/x/cobol/let_and_print.cob:11: error: syntax error, unexpected +
