tests/transpiler/x/cobol/let_and_print.cob
>>SOURCE FORMAT FREE
IDENTIFICATION DIVISION.
PROGRAM-ID. MAIN.

DATA DIVISION.
WORKING-STORAGE SECTION.
01 A PIC 9(2) VALUE 10.
01 B PIC 9(2) VALUE 20.

PROCEDURE DIVISION.
    DISPLAY A + B
    STOP RUN.
